fixed manager admin controller
